base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commerce-services-api
  labels:
    service: api
    app: commerce-services
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    service: api
    app: commerce-services
